# memqueue

./: CMakeLists.txt  README.md  build.sh  clean.sh
daemon/: CMakeLists.txt  Daemon.cpp  Daemon.h  build.sh  main.cpp
include/: file_queue.h  file_storage.h  linux_base.h  linux_mm.h  linux_spinlock.h  linux_syscalls.h  linux_uaccess.h  mem_queue.h  memqueue_constants.h
src/: Makefile  file_queue.c  file_storage.c  mem_queue.c  memqueue_module.c
test/: memqueue1.test  memqueue2.test  memqueue3.test  test_filequeue.cpp  test_memqueue.cpp
